--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,27 +1,28 @@
-version: '3.7'
+version: '3.3'
 
 services:
-    pgadmin:
-        image: dpage/pgadmin4
-        environment: 
-            PGADMIN_DEFAULT_EMAIL: docker
-            PGADMIN_DEFAULT_PASSWORD: docker
-        ports: 
-            - 80:80
-        depends_on: 
-            - db
+    db:
+        image: mongo
+        ports:
+            - 8888:27017
+        volumes:
+            - datadir:/data/db
     web:
         build:
+            context: ./
             dockerfile: ./Dockerfile-tools
+            args:
+                http_proxy: ${npm_config_proxy}
         environment: 
                 PORT: 3000
                 HOST: '0.0.0.0'
         ports:
+            - 3000:3000
             - 9229:9229
-        volumes: 
+        volumes:
             - .:/src
             - nodemodules:/src/node_modules
         command: npm run dev
 
 volumes:
-    nodemodules: {}
+    datadir: {}
