--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,20 @@
-version: '3.7'
+version: '3.3'
 
 services:
-  db:
-    image: postgres:12.2
-    ports:
-        - 5432:5432
-    environment: 
-        POSTGRES_USER: docker
-        POSTGRES_PASSWORD: docker
+    db:
+        image: mongo
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: ifeira
+            MONGO_INITDB_ROOT_PASSWORD: 1f3i#a
 
-  web:
-    build:
-        context: ./
-        dockerfile: ./Dockerfile-production
-        args:
-          http_proxy: ${npm_config_proxy}
-    environment: 
-      PORT: 3000
-      HOST: '0.0.0.0'
-    ports:
-      - 3000:3000
-    depends_on: 
-      - db
+    web:
+        build:
+            context: ./
+            dockerfile: ./Dockerfile-production
+            args:
+                http_proxy: ${npm_config_proxy}
+        depends_on: 
+            - db
 
 volumes:
-  nodemodules: {}
-    
+    nodemodules: {}
