--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^25.2.3",
