--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,10 @@
-version: '3.3'
+version: "3.3"
 
 services:
     db:
         image: mongo
         ports:
-            - 8888:27017
+            - 8889:27017
         volumes:
             - datadir:/data/db
     web:
@@ -13,9 +13,9 @@ services:
             dockerfile: ./Dockerfile-tools
             args:
                 http_proxy: ${npm_config_proxy}
-        environment: 
-                PORT: 3000
-                HOST: '0.0.0.0'
+        environment:
+            PORT: 3000
+            HOST: "0.0.0.0"
         ports:
             - 3000:3000
             - 9229:9229
