--- a/package.json
+++ b/package.json
@@ -33,14 +33,12 @@
     "express": "^4.17.1",
     "jest": "^25.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.2",
-    "remover-acentos": "0.0.6"
+    "mongodb": "^3.5.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "jasmine": "^3.5.0",
-    "supertest": "^4.0.2",
-    "mongodb": "^3.5.2"
+    "supertest": "^4.0.2"
   }
 }
