add pasta ifeira-api com a versao que esta na aws

--- a/bancoMongoData/docker-compose.yml
+++ b/bancoMongoData/docker-compose.yml
@@ -2,10 +2,21 @@ version: "3.1"
 
 services:
   mongo:
-    image: mongo
-    restart: always
+    restart: "unless-stopped"
+    image: mongo:bionic
+    container_name: "meu-feirante-mongodb"
     ports:
-      - 8888:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ifeira
-      MONGO_INITDB_ROOT_PASSWORD: 1f3i#a
+      - 21107:27017
+    env_file:
+      - ./mongo.env
+    volumes:
+      - meu-feirante-mongo-data:/data/db
+    networks:
+      - meufeirante
+
+networks:
+  meufeirante:
+    external: true
+
+volumes:
+  meu-feirante-mongo-data: {}
